Se verifico que no se pueda conectar varias veces el mismo usuario, ademas se hizo el envio de usuario conectado a cliente para que mostrara el error